--- a/templates/menu/profile.html.twig
+++ b/templates/menu/profile.html.twig
@@ -34,12 +34,14 @@
             <a href="#">посмотреть ВСЮ СТАТИСТИКУ</a>
         </div>
         <div class="other-information">
+            <h2 class="other-information__title">достижения</h2>
             <div class="slider-container">
                 <div class="slider">
                     <div class="achievement">
                         <h3 class="achievement__title path-legend">Путь легенды</h3>
                         <div class="achievement__list">
                             <div class="achievement__item">
+                                <div class="overlay"></div>
                                 <img src="/images/medals/bronze.png" alt="medal" class="item__image">
                                 <div class="item-wrapper">
                                     <p class="item__title path-legend easy">Сыграй 10 игр</p>
@@ -52,7 +54,7 @@
                                     <p class="item__title path-legend medium">Сыграй 50 игр</p>
                                     <p class="item__subtitle path-legend medium">Твоя настойчивость приносит плоды! С 50 сыгранными играми ты уже формируешь свою игровую судьбу.</p>
                                 </div>
-                            </div>
+                            </div>             
                             <div class="achievement__item">
                                 <img src="/images/medals/gold.png" alt="medal" class="item__image">
                                 <div class="item-wrapper">
@@ -60,6 +62,7 @@
                                     <p class="item__subtitle path-legend hard">Поздравляем, легенда! Достигнув 100 игр, ты входишь в ряды мастеров, о которых шепчутся по всему игровому миру.</p>
                                 </div>
                             </div>
+                            
                         </div>
                     </div>
                     <div class="achievement">
