изменил пути в js

--- a/templates/menu/menu.html.twig
+++ b/templates/menu/menu.html.twig
@@ -74,6 +74,6 @@
 	</div>
 	{% include 'mini-profile.html.twig' %}
 </body>
-<script src="/js/menu.js"></script>
-<script src="/js/mini-profile.js"></script>
+<script src="/js/menu/menu.js"></script>
+<script src="/js/menu/mini-profile.js"></script>
 {% endblock %}
