--- a/templates/menu/profile.html.twig
+++ b/templates/menu/profile.html.twig
@@ -23,12 +23,12 @@
                 <h1 class="username">{{ login ?? 'Славянин'}}</h1>
                 <div class="single-game">
                     <p class="count-solo-game count-game">Всего одиночных игр :</p>
-                    <p class="count-solo-game">{{ player.gameCount }}</p>
+                    <p class="count-solo-game">{{ player.statistics.gameCount }}</p>
                 </div>
                 <div class="multiplayer-game">
                     <p class="count-multiplayer-game count-online-game">Всего онлайн игр :</p>
                     <p class="count-multiplayer-game">10</p>
-                    <span class="count-win-game title">↪ выиграно из них</span><span class="count-win-game"> {{ player.winCount }}</span>
+                    <span class="count-win-game title">↪ выиграно из них</span><span class="count-win-game"> {{ player.statistics.winCount }}</span>
                 </div>
             </div>
             <a href="#">посмотреть ВСЮ СТАТИСТИКУ</a>
