адаптировал твиг шаблоны под твиг

--- a/templates/game_modes/l40.html.twig
+++ b/templates/game_modes/l40.html.twig
@@ -4,7 +4,8 @@
 	40 Lines
 {% endblock %}
 {% block style %}
-	<link rel="stylesheet" href="/css/game.css"/><link rel="stylesheet" href="/css/swipe-events.css"/>
+	<link rel="stylesheet" href="/css/game.css"/>
+	<link rel="stylesheet" href="/css/swipe-events.css"/>
 {% endblock %}
 {% block content %}
 	<main class="main">
