--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="/css/login.css"/>
 {% endblock %}
 {% block script %}
-	<script src="/js/login.js"></script>
+	<script src="/js/menu/login.js"></script>
 {% endblock %}
 {% block content %}
 	<main class="main">
