--- a/templates/select_modes/select-koop-mode.html.twig
+++ b/templates/select_modes/select-koop-mode.html.twig
@@ -4,10 +4,11 @@
 	solo classic mode
 {% endblock %}
 {% block style %}
-	<link rel="stylesheet" href="/css/select.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
+	<link rel="stylesheet" href="/css/select.css"/>
+	<link rel="stylesheet" href="/css/mini-profile.css"/>
 {% endblock %}
 {% block script %}
-	<script src="/js/game/game-mode.js"></script><script src="/js/menu/mini-profile.js"></script>
+	<script src="/js/game/game-mode.js"></script>
 {% endblock %}
 {% block content %}
 	<div class="header">
@@ -16,16 +17,16 @@
 		</a>
 		<img src="/images/logo.png" alt="logo" class="logo"/>
 		<div class="profile">
-			{% if not user or not user.login %}
+			{% if player is not defined %}
 				<a href="{{ path('register') }}">
 					<div class="profile">
-						<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+						<p class="profile__nickname">{{player.login ?? 'славянин'}}</p>
 						<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
 					</div>
 				</a>
 			{% else %}
 				<div class="profile">
-					<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+					<p class="profile__nickname">{{player.login ?? 'славянин'}}</p>
 					<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
 				</div>
 			{% endif %}
@@ -63,4 +64,5 @@
 		</div>
 	</div>
 {% include 'mini-profile.html.twig' %}
+<script src="/js/menu/mini-profile.js"></script>
 {% endblock %}
