--- a/templates/select_modes/select-multiplayer-mode.html.twig
+++ b/templates/select_modes/select-multiplayer-mode.html.twig
@@ -6,9 +6,6 @@
 {% block style %}
 	<link rel="stylesheet" href="/css/select.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
 {% endblock %}
-{% block script %}
-	<script src="/js/menu/mini-profile.js"></script>
-{% endblock %}
 {% block content %}
 	<div class="header">
 		<a href="/settings">
@@ -16,16 +13,16 @@
 		</a>
 		<img src="/images/logo.png" alt="logo" class="logo"/>
 		<div class="profile">
-			{% if not user or not user.login %}
+			{% if player is not defined %}
 				<a href="{{ path('register') }}">
 					<div class="profile">
-						<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+						<p class="profile__nickname">{{player.login ?? 'славянин'}}</p>
 						<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
 					</div>
 				</a>
 			{% else %}
 				<div class="profile">
-					<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+					<p class="profile__nickname">{{player.login ?? 'славянин'}}</p>
 					<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
 				</div>
 			{% endif %}
@@ -68,4 +65,5 @@
 		</div>
 	</div>
 	{% include 'mini-profile.html.twig' %}
+	<script src="/js/menu/mini-profile.js"></script>
 {% endblock %}
