--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="/css/register-style.css"/>
 {% endblock %}
 {% block script %}
-	<script src="/js/register.js"></script>
+	<script src="/js/menu/register.js"></script>
 {% endblock %}
 {% block content %}
 	<main class="main">
