--- a/templates/game/game.html.twig
+++ b/templates/game/game.html.twig
@@ -4,10 +4,10 @@
 	Tetris
 {% endblock %}
 {% block style %}
-	<link rel="stylesheet" href="/css/game.css"/><link rel="stylesheet" href="/css/swipe-events.css"/>
+	<link rel="stylesheet" href="/css/game.css"/>
+	<link rel="stylesheet" href="/css/swipe-events.css"/>
 {% endblock %}
 {% block content %}
-
 		<main class="main">
 			<img class="logo" src="/images/logo.svg" alt="logo">
 			<div class="wrapper-game">
