--- a/templates/game_modes/koop.html.twig
+++ b/templates/game_modes/koop.html.twig
@@ -4,7 +4,8 @@
 	Koop
 {% endblock %}
 {% block style %}
-	<link rel="stylesheet" href="/css/game.css"/><link rel="stylesheet" href="/css/swipe-events.css"/>
+	<link rel="stylesheet" href="/css/game.css"/>
+	<link rel="stylesheet" href="/css/swipe-events.css"/>
 {% endblock %}
 {% block content %}
 	<main class="main">
