--- a/templates/menu/menu.html.twig
+++ b/templates/menu/menu.html.twig
@@ -13,9 +13,9 @@
 		</a>
 		<img src="/images/logo.png" alt="logo" class="logo">
 		<div class="profile">
-			<a href="{{(user.login ?? null) ? path("profile", {login: user.login}) : path('register') }}">
+			<a href="{{(player.login ?? null) ? path("profile", {login: player.login}) : path('login') }}">
 				<div class="profile">
-					<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+					<p class="profile__nickname">{{player.login ?? 'славянин'}}</p>
 					<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
 				</div>
 			</a>
