--- a/templates/menu/settings.html.twig
+++ b/templates/menu/settings.html.twig
@@ -13,16 +13,16 @@
         </a>
 		<img src="/images/logo.png" alt="logo" class="logo"/>
 		<div class="profile">
-			{% if not user or not user.login %}
+			{% if player is not defined %}
 				<a href="{{ path('register') }}">
 					<div class="profile">
-						<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+						<p class="profile__nickname">{{player.login ?? 'славянин'}}</p>
 						<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
 					</div>
 				</a>
 			{% else %}
 				<div class="profile">
-					<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+					<p class="profile__nickname">{{player.login ?? 'славянин'}}</p>
 					<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
 				</div>
 			{% endif %}
