--- a/templates/multiplayer/game-over-multi.html.twig
+++ b/templates/multiplayer/game-over-multi.html.twig
@@ -4,7 +4,8 @@
 	Multiplayer Game Over
 {% endblock %}
 {% block style %}
-	<link rel="stylesheet" href="/css/game-over-multi.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
+	<link rel="stylesheet" href="/css/game-over-multi.css"/>
+	<link rel="stylesheet" href="/css/mini-profile.css"/>
 {% endblock %}
 {% block content %}
 	<div class="bg">
@@ -13,7 +14,7 @@
 			<img src="/images/logo.png" alt="logo" class="logo">
 			<input class="player_id" type="hidden" value="{{ user.playerId ?? 0}}">
 			<div class="profile">
-				{% if not user or not user.login %}
+				{% if player is not defined %}
 					<a href="{{ path('register') }}">
 						<div class="profile">
 							<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
