--- a/templates/menu/profile.html.twig
+++ b/templates/menu/profile.html.twig
@@ -15,10 +15,12 @@
     </header>
     <main class="main">
         <div class="description-user">
+        <form action="/image" enctype="multipart/form-data" method="POST">
             <label for="image-input">
-                <img class="user-avatar" src="/images/human.jpeg" alt="avatar" >
+                <img class="user-avatar" src='../uploads/{{player.getAvatar() ?? "human.jpeg"}}' alt="avatar" >
             </label>
-            <input type="file" id="image-input" accept="image/png, image/jpeg, image/jpg">
+            <input type="file" id="image-input"  name="avatarPath" accept="image/png, image/jpeg, image/jpg">
+        </form>
             <div class="general-results">
                 <h1 class="username">{{ login ?? 'Славянин'}}</h1>
                 <div class="single-game">
