вернул таблицу лидеров

--- a/templates/menu/menu.html.twig
+++ b/templates/menu/menu.html.twig
@@ -63,6 +63,19 @@
 					</p>
 				</div>
 			</a>
+			<a href="/leaderboard" class="link leader link_with-image">
+				<div class="img-placeholder">
+					<img src="/images/about.png" alt="about" class="link__image">
+				</div>
+				<div class="link__text">
+					<p class="link__title leader__title">
+						таблица лидеров
+					</p>
+					<p class="link__subtitle leader__subtitle">
+						узрите настоящих героев тетриса
+					</p>
+				</div>
+			</a>
 		</div>
 	</div>	
 	<script src="/js/menu/menu.js"></script>
