--- a/public/css/select.css
+++ b/public/css/select.css
@@ -222,6 +222,21 @@ body{
     color: #7874A5;
 }
 
+.leader{
+    background-color: #6d5531;
+    border-top: 3px solid #a3804b;
+    border-left: 3px solid #705731;
+    border-bottom: 3px solid #1b150c;
+}
+
+.leader__title {
+    color: #dfd9b0;
+}
+
+.leader__subtitle {
+    color: #dfd9b0;
+}
+
 .about {
     background-color: #222;
     border-top: 3px solid #2a2a2a;
