всякие правки фронтэнда

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,7 +1,9 @@
 <a href="/settings">
     <img src="/images/settings.png" alt="settings" class="settings"/>
 </a>
-<img src="/images/logo.png" alt="logo" class="logo"/>
+<a href="/">
+    <img src="/images/logo.png" alt="logo" class="logo"/>
+</a>
 <div class="profile">
     {% if player is not defined %}
         <a href="{{ path('register') }}">
