--- a/templates/instruction.html.twig
+++ b/templates/instruction.html.twig
@@ -11,8 +11,8 @@
 <div class="instruction phone">
     <h1>инструкция</h1>
     <p class="instruction__text">движения по сторонам - свайпы влево и вправо</p>
-    <p class="instruction__text">ускорение падения - удерживание на экране</p>
-    <p class="instruction__text">моментальная установка - один тап по экрану</p>
+    <p class="instruction__text">ускорение падения - нажать на экран и удерживать</p>
+    <p class="instruction__text">моментальная установка - нажатие на экран</p>
     <p class="instruction__text">поворот фигуры по часовой стрелке - свайп вверх </p>
     <p class="instruction__text">использование буффера - свайп вниз (фигуры поменяются местами, обратно можно будет поменять только следующую фигуру)</p>
 </div>
