--- a/templates/menu/leaderboard.html.twig
+++ b/templates/menu/leaderboard.html.twig
@@ -28,8 +28,8 @@
 			</div>
 			<div class="max__average">
 				<div class="menu__title">
-					<h1>max average score</h1>
-					<h2>топ игроков по максимальному  среднему счету</h2>
+					<h1>max total score</h1>
+					<h2>топ игроков по максимальному суммарному счету</h2>
 				</div>
 			</div>
 		</div>	
