--- a/public/css/game-over-multi.css
+++ b/public/css/game-over-multi.css
@@ -85,11 +85,12 @@
 }
 .players {
     overflow-y: scroll;
+    overflow-x: hidden;
     flex-direction: column;
     justify-content: center;
     width: 100%; 
     align-items: flex-end;
-    max-height: 40%;
+    max-height: 30%;
 }
 
 .players::-webkit-scrollbar {
