--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -7,7 +7,9 @@
 {% endblock %}
 {% block content %}
 	<div class="bg">
-        <img src="/images/logo.png" alt="logo" class="logo">
+        <a href="/menu">
+            <img src="/images/logo.png" alt="logo" class="logo">
+        </a>
         <div class="error-block">
             <h1 class="error-title">Ошибка №{{code}}</h1>
             <h2 class="error-subtitle">Причина: {{message}}</h2>
