--- a/templates/menu/about.html.twig
+++ b/templates/menu/about.html.twig
@@ -5,11 +5,12 @@
 {% endblock %}
 {% block style %}
 	<link rel="stylesheet" href="/css/select.css"/>
+	<link rel="stylesheet" href="/css/header.css"/>
 {% endblock %}
 {% block content %}
 	<div class="bg bg_dark">
 		<div class="header">
-			<img src="/images/logo.png" alt="logo" class="logo"/>
+			{% include 'header.html.twig' %}
 		</div>
 		<div class="select">
 			<a href="/menu">
