докинул текст в интернационализацию

--- a/templates/game/game-over-mode.html.twig
+++ b/templates/game/game-over-mode.html.twig
@@ -13,9 +13,9 @@
 	<div class="bg">
 		<div class="results-placeholder">
 			<div class="results">
-				<p class="result-title">к сожалению ты не достиг цели</p>
-				<p class="result-title max">ты можешь попытаться снова или вернуться в меню</p>
-				<p class="result-title description">ещё немного! держи мотивирующее видео!</p>
+				<p class="lose-title">к сожалению ты не достиг цели</p>
+				<p class="lose-title max">ты можешь попытаться снова или вернуться в меню</p>
+				<p class="lose-title description">ещё немного! держи мотивирующее видео!</p>
 				<div class="video-placeholder">
 					<video controls height="300" poster="/images/cats.jpg">
 						<source src="/video/ricroll.mp4" type="video/mp4">
