переделал английский текст

--- a/templates/menu/profile.html.twig
+++ b/templates/menu/profile.html.twig
@@ -177,22 +177,22 @@
                             <div class="achievement__item">
                                 <img src="/images/medals/bronze.png" alt="medal" class="item__image">
                                 <div class="item-wrapper">
-                                    <p class="item__title multy easy">Победи в 3 онлайн играх подряд</p>
-                                    <p class="item__subtitle multy easy">Ты заручился поддержкой удачи! Три победы подряд — это всего лишь начало великого пути!</p>
+                                    <p class="item__title multy easy">Победи в 3 онлайн играх</p>
+                                    <p class="item__subtitle multy easy">Ты заручился поддержкой удачи! Три победы — это всего лишь начало великого пути!</p>
                                 </div>
                             </div>
                             <div class="achievement__item">
                                 <img src="/images/medals/silver.png" alt="medal" class="item__image">
                                 <div class="item-wrapper">
-                                    <p class="item__title multy medium">Победи в 5 онлайн играх подряд</p>
+                                    <p class="item__title multy medium">Победи в 5 онлайн играх</p>
                                     <p class="item__subtitle multy medium">Никто не может остановить твою волну! Победа в 5 онлайн играх подряд утвердит твой статус!</p>
                                 </div>
                             </div>
                             <div class="achievement__item">
                                 <img src="/images/medals/gold.png" alt="medal" class="item__image">
                                 <div class="item-wrapper">
-                                    <p class="item__title multy hard">Победи 10 соперников подряд</p>
-                                    <p class="item__subtitle multy hard">Ты — непобедимый! 10 побед подряд устанавливают новый стандарт для всех игроков!</p>
+                                    <p class="item__title multy hard">Победи 10 онлайн играх</p>
+                                    <p class="item__subtitle multy hard">Ты — непобедимый! 10 побед устанавливают новый стандарт для всех игроков!</p>
                                 </div>
                             </div>
                         </div>
