рабочая таблица лидеров

--- a/templates/menu/leaderboard.html.twig
+++ b/templates/menu/leaderboard.html.twig
@@ -26,7 +26,7 @@
 					<h2>топ игроков по максимальному количеству побед</h2>
 				</div>
 			</div>
-			<div class="max__average">
+			<div class="max__total">
 				<div class="menu__title">
 					<h1>max total score</h1>
 					<h2>топ игроков по максимальному суммарному счету</h2>
