--- a/public/css/error.css
+++ b/public/css/error.css
@@ -18,7 +18,7 @@
 
 .bg {
     height: 100vh;
-    background: url(/images/dark-bg.png) no-repeat;
+    background: url("https://i.postimg.cc/1zyHTmtK/bg.png") no-repeat;
     background-size: cover;
     padding: 10px;
 }
