--- a/public/css/leaderboard.css
+++ b/public/css/leaderboard.css
@@ -12,12 +12,12 @@
 
 .bg {
     height: 100vh;
-    background: url(/images/bg.png) no-repeat;
+    background: url("https://i.postimg.cc/1zyHTmtK/bg.png") no-repeat;
     background-size: cover;
 }
 
 .bg_dark {
-    background: url(/images/dark-bg.png) no-repeat;
+    background: url("https://i.postimg.cc/1zyHTmtK/bg.png") no-repeat;
     background-size: cover;
 }
 
