--- a/templates/multiplayer/list_lobby.html.twig
+++ b/templates/multiplayer/list_lobby.html.twig
@@ -17,12 +17,10 @@
 			<h2 class="join-title">Найти лобби по уникальному имени</h2>
 
 			<div class="row">
-				<a href="/select_multiplayer_mode">
-					<div class="back">
-						<p class="back__button">
-							назад
-						</p>
-					</div>
+				<a href="/select_multiplayer_mode" class="back-button-link">
+					<h1>
+						назад
+					</h1>
 				</a>
 				<div class="joinn">
 					<input type="string" id="join" class="join" name="join">
