--- a/templates/select_modes/select-classic-mode.html.twig
+++ b/templates/select_modes/select-classic-mode.html.twig
@@ -16,13 +16,11 @@
 		{% include 'header.html.twig' %}
 	</div>
 	<div class="select">
-		<a href="/select_solo_mode">
-			<div class="back">
-				<p class="back__button">
-					назад
-				</p>
-			</div>
-		</a>
+		<a href="/select_solo_mode" class="back-button-link">
+					<h1>
+						назад
+					</h1>
+				</a>
 		<div class="links">
 			<div class="link">
 				<div class="link__text">
