--- a/templates/select_modes/select-multiplayer-mode.html.twig
+++ b/templates/select_modes/select-multiplayer-mode.html.twig
@@ -13,13 +13,11 @@
 		{% include 'header.html.twig' %}
 	</div>
 	<div class="select">
-		<a href="/menu">
-			<div class="back">
-				<p class="back__button">
-					назад
-				</p>
-			</div>
-		</a>
+		<a href="/menu" class="back-button-link">
+					<h1>
+						назад
+					</h1>
+				</a>
 		<div class="links">
 			<a href="/lobby" class="link custom link_with-image">
 				<div class="img-placeholder">
