--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -14,7 +14,7 @@
 .bg {
     height: 100vh;
     width: 100vw;
-    background: url(/images/bg.png) no-repeat;
+    background: url("https://i.postimg.cc/1zyHTmtK/bg.png") no-repeat;
     background-size: cover;
 }
 
