--- a/public/css/login.css
+++ b/public/css/login.css
@@ -11,7 +11,7 @@
 body {
     max-width: 100%;
     max-height: 100%;
-    background-image: url(/images/bg.png);
+    background: url("https://i.postimg.cc/1zyHTmtK/bg.png") no-repeat;
     background-size: cover;
 }
 
