--- a/public/css/register-style.css
+++ b/public/css/register-style.css
@@ -13,7 +13,7 @@
 body {
     max-width: 100%;
     max-height: 100%;
-    background-image: url(/images/bg.png);
+    background: url("https://i.postimg.cc/1zyHTmtK/bg.png") no-repeat;
     background-size: cover;
 }
 
