--- a/templates/menu/about.html.twig
+++ b/templates/menu/about.html.twig
@@ -12,12 +12,10 @@
 			<img src="/images/logo.png" alt="logo" class="logo"/>
 		</div>
 		<div class="select">
-			<a href="/menu">
-				<div class="back">
-					<p class="back__button">
+			<a href="/menu" class="back-button-link">
+					<h1>
 						назад
-					</p>
-				</div>
+					</h1>
 			</a>
 			<div class="links">
 				<div class="link">
