--- a/templates/menu/menu.html.twig
+++ b/templates/menu/menu.html.twig
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 	<div class="menu">
-		<div class="links links_start">
+		<div class="links">
 			<a href="/select_solo_mode" class="link solo link_with-image">
 				<div class="img-placeholder">
 					<img src="/images/solo.png" alt="solo" class="link__image">
@@ -63,15 +63,15 @@
 					</p>
 				</div>
 			</a>
-			<a href="/leaderboard" class="link leader link_with-image">
+			<a href="/leaderboard" class="link leaders link_with-image">
 				<div class="img-placeholder">
 					<img src="/images/about.png" alt="about" class="link__image">
 				</div>
 				<div class="link__text">
-					<p class="link__title leader__title">
+					<p class="link__title leaders__title">
 						таблица лидеров
 					</p>
-					<p class="link__subtitle leader__subtitle">
+					<p class="link__subtitle leaders__subtitle">
 						узрите настоящих героев тетриса
 					</p>
 				</div>
