сделал моковые достижения

--- a/templates/menu/profile.html.twig
+++ b/templates/menu/profile.html.twig
@@ -43,7 +43,6 @@
                         <h3 class="achievement__title path-legend">Путь легенды</h3>
                         <div class="achievement__list">
                             <div class="achievement__item">
-                                <div class="overlay"></div>
                                 <img src="/images/medals/bronze.png" alt="medal" class="item__image">
                                 <div class="item-wrapper">
                                     <p class="item__title path-legend easy">Сыграй 10 игр</p>
@@ -232,6 +231,7 @@
             <div class="back">
                 <p class="link_back">Назад</p>
             </div>
+            <button class="button">НАЖАТЬ</button>
         </div>
     </main>
     <script src="/js/menu/profile.js"></script>
