--- a/templates/menu/menu.html.twig
+++ b/templates/menu/menu.html.twig
@@ -65,7 +65,7 @@
 			</a>
 			<a href="/leaderboard" class="link leaders link_with-image">
 				<div class="img-placeholder">
-					<img src="/images/about.png" alt="about" class="link__image">
+					<img src="/images/leaders.png" alt="about" class="link__image">
 				</div>
 				<div class="link__text">
 					<p class="link__title leaders__title">
